--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button class = "symbologyButton" id = 'storageButton'>Storage</button>
         <button class = "symbologyButton" id = 'hybridButton'>Hybrid</button>
         <button class = "symbologyButton" id = 'otherButton'>Other</button>
+        <button class = "symbologyButton" id = 'testButton'>Data Test</button>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
         <script src="https://unpkg.com/@turf/turf/turf.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
